<resources>
    <string name="app_name">dEventer</string>

    <!-- activity_sign_in -->
    <string name="logo">Logo</string>
    <string name="welcome">Bienvenido a dEventer</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">Entrar</string>
    <string name="acces_w_fingertip">Acceder con huella</string>
    <string name="loading">Cargando…</string>
    <string name="create_account">¿Aún no tienes cuenta? Créate una</string>
    <string name="google_or_fb">¿Tienes cuenta de Google o Facebook?</string>
    <string name="sign_in_fb">Entrar con Facebook</string>
    <string name="sign_in_google">Entrar con Google</string>

    <!-- SignInActivity -->
    <string name="fast_start">Inicio rápido</string>
    <string name="fingertip_start">¿Desea acceder la próxima vez mediante su huella?</string>
    <string name="yes">De acuerdo</string>
    <string name="no">No, gracias</string>
    <string name="empty_fields">Por favor, rellene todos los campos para continuar</string>
    <string name="failed_sign_in">No se ha podido iniciar sesión</string>
    <string name="disabled_biometric">El sensor de huellas no está disponible actualmente</string>
    <string name="no_biometric_hw">Este dispositivo no tiene sensor de huellas</string>
    <string name="no_registered_fingertip">No hay ninguna huella registrada</string>
    <string name="biometric_access">Acceso con huella a dEventer</string>
    <string name="use_fingertip">Introduzca su huella para acceder</string>
    <string name="cancel">Cancelar</string>
    <string name="previous_access_fingertip">Debe acceder almenos una vez para poder guardar sus datos de acceso.</string>

    <!-- activity_sign_up -->
    <string name="name_surname">Nombre y apellidos</string>
    <string name="repeat_password">Confirmar contraseña</string>
    <string name="postal_code">Código postal</string>
    <string name="birth">Fecha de nacimiento</string>
    <string name="sex_preference">Escoja el sexo con el que más se identifique</string>
    <string name="man">Hombre</string>
    <string name="woman">Mujer</string>
    <string name="any">Otro</string>
    <string name="sign_up">Registrarse</string>
    <string name="go_back">Volver</string>

    <!-- SignUpActivity -->
    <string name="under_age">Lo sentimos, pero la aplicación requiere que seas mayor de edad</string>
    <string name="agree">Entendido</string>
    <string name="see_you">Gracias por entendernos, ¡HASTA PRONTO!</string>
    <string name="failed_sign_up">Hubo un fallo al registrarse</string>
    <string name="sex_selection">Debe seleccionar el sexo</string>
    <string name="no_password_match">Las contraseñas no coinciden</string>
    <string name="succeeded_sign_up">Registrado con éxito</string>

    <!-- activity_home -->
    <string name="settings">Ajustes</string>
    <string name="profile">Mi perfil</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="confirm_sign_out">¿Seguro que desea cerrar sesión?</string>
    <string name="events">Planes</string>
    <string name="own_events">Mis planes</string>
    <string name="chat">Chat</string>

    <!-- activity_profile -->
    <string name="user">Usuario</string>
    <string name="change_photo">(pulsa para escoger la foto de perfil)</string>
    <string name="personal_data">Datos personales</string>
    <string name="name_surname_stylized">• Nombre y apellidos:</string>
    <string name="age">• Edad:</string>
    <string name="sex_stylized">• Sexo:</string>
    <string name="postal_code_stylized">• C. P. :</string>
    <string name="modify_personal_data">Para modificar los datos personales solicitalo en: 1998informatica1998@gmail.com</string>
    <string name="access_data">Datos de acceso</string>
    <string name="email_stylized">• Email:</string>
    <string name="confirm">Ok</string>

    <!-- ProfileActivity -->
    <string name="succeded_image_change">Imagen cambiada con éxito</string>
    <string name="permission_reminder">Recordatorio de permiso</string>
    <string name="accept_permission">Es necesario aceptar los permisos para poder cambiar su foto de perfil</string>

    <!-- fragment_events -->
    <string name="loading_events">Cargando planes...</string>

    <!-- EventsFragment -->
    <string name="image_not_found">No se ha encontrado la imagen</string>
    <string name="event_uploaded">Plan en marcha, ¡diviértete!</string>
    <string name="event_upload_failed">Se ha producido un error al subir el plan</string>

    <!-- item_event -->
    <string name="event_title">Titulo del plan</string>
    <string name="event_date">Fecha del plan</string>
    <string name="event_time">Hora del plan</string>
    <string name="event_location">Ubicación</string>
    <string name="event_price">Precio</string>

    <!-- dialog_create_event -->
    <string name="event_presentation">Presenta el plan</string>
    <string name="put_image_event">(Ponle una imagen al plan)</string>
    <string name="name_event">¿Cómo se llama el plan?</string>
    <string name="date">¿Cúando es?</string>
    <string name="time">¿A qué hora es?</string>
    <string name="location">¿Dónde es?</string>
    <string name="price">¿Cúanto cuesta?</string>
    <string name="description">¿Quieres describir el plan?</string>
    <string name="create_event">Crear plan</string>

    <!-- activity_map -->
    <string name="places">Busca ciudades, calles, lugares ...</string>

    <!-- MapActivity -->
    <string name="no_location">No se ha encontrado la localización proporcionada</string>
    <string name="enter_location">Por favor introduzca una localización</string>
    <string name="error">Hubo un error</string>
    <string name="madrid">Madrid</string>

    <string name="title_activity_inicio">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_salir">Cerrar sesion</string>


    <string name="confgiruacion">confgiruacion</string>
    <string name="correo_ejemplo">ejemplo@gmail.com</string>
    <string name="inicio">Inicio</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electr_nicoPerfil">Correo electrónico</string>
    <string name="tel_fono_de_contacto">Teléfono de contacto</string>
    <string name="nivel_de_estudios">Nivel de estudios</string>
    <string name="cuenta_algo_m_s_sobre_ti">Cuenta algo más sobre ti…</string>
    <string name="guardar">Guardar</string>
    <string name="pa_s_de_residencia">País de residencia</string>


    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="crear">Crear event</string>
    <string name="fecha">Fecha</string>
    <string name="informaci_n_del_plan">Información del event</string>
    <string name="hora">Hora</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="precio">Precio</string>
    <string name="descripcion">Descripcion</string>
    <string name="ir">IR</string>
    <string name="apuntarse_al_plan">¡Apuntarse al event!</string>
    <string name="apuntado">Apuntado</string>
    <string name="apuntados">Apuntados</string>


    <string name="facebook_app_id" translatable="false">533589277584622</string>
    <string name="nombre_canal">Nombre del canal</string>
    <string name="descripcion_canal">Descripcion del canal</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>


    <string name="id_fcm">AAAASNGD9Do:APA91bHSAXZXcX70y-sxSYLtEQF_uN57mu8EXLL20MRdRP-QvsOlko8OhAF23HLIxmcH4DIr1_GfMiGmgYmQbDvx8D22K3B1v0pCKgCc6LUF4BSPR2n2GOqjG1wmpx7qB870dtcBPjf4</string>
    <string name="url_fcm">https://fcm.googleapis.com/fcm/send</string>
    <string name="fcm_message">Titulo de la notificación</string>
</resources>
