<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrincipal"
    android:backgroundTint="@color/colorAccent"
    android:fitsSystemWindows="true"
    tools:context=".view.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_10"
        android:paddingTop="@dimen/padding_20"
        android:paddingEnd="@dimen/padding_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:background="@drawable/blue_background"
            android:orientation="vertical"
            android:padding="@dimen/padding_10">

            <TextView
                android:id="@+id/tvUser"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanovaregular"
                android:gravity="center"
                android:text="@string/user"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_20"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civProfile"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="@dimen/size_150"
                android:layout_height="@dimen/size_150"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_perm_identity_black_24dp"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="@dimen/size_2" />

            <TextView
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_5"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/change_photo"
                android:textColor="@color/gris_profile_activity" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:background="@drawable/blue_background"
            android:orientation="vertical"
            android:padding="@dimen/padding_10">

            <TextView
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanovaregular"
                android:text="@string/personal_data"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_20"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/size_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/proximanovaregular"
                    android:text="@string/name_surname_stylized"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="@dimen/size_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/size_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/proximanovaregular"
                    android:text="@string/age"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="@dimen/size_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/size_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/proximanovaregular"
                    android:text="@string/sex_stylized"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSex"
                    android:layout_width="@dimen/size_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/size_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/proximanovaregular"
                    android:text="@string/postal_code_stylized"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPostalCode"
                    android:layout_width="@dimen/size_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_5"
            android:fontFamily="@font/proximanovaregular"
            android:padding="@dimen/padding_10"
            android:text="@string/modify_personal_data"
            android:textColor="@color/gris_profile_activity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:background="@drawable/blue_background"
            android:orientation="vertical"
            android:padding="@dimen/padding_10">

            <TextView
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanovaregular"
                android:text="@string/access_data"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_20"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/size_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/proximanovaregular"
                    android:text="@string/email_stylized"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="@dimen/size_0"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/efabConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin_16"
            android:backgroundTint="@color/colorPrimaryDark"
            android:elevation="@dimen/elevation_16"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/colorAccent"
            android:theme="@style/AppTheme" />

    </LinearLayout>

</ScrollView>